# simple-texcomp

./: LICENSE  Makefile  README.md  Tracy  downsampler.cpp  meson.build  meson_options.txt  quantizer  simple_astc.h  simple_bc1.h  simple_bcn_common.h  simple_ycocg_bc3.h  transcode.nu  transcoder.cpp
android/TexcompApp/: build.gradle  settings.gradle
android/TexcompApp/app/: build.gradle
android/TexcompApp/app/src/androidTest/java/fi/tuni/cpc/texcompapp/: ExampleInstrumentedTest.java
android/TexcompApp/app/src/main/: AndroidManifest.xml
android/TexcompApp/app/src/main/cpp/: CMakeLists.txt  build_tjenc.sh  native-lib.cpp  tjenc.cpp  tjenc.h
android/TexcompApp/app/src/main/java/fi/tuni/cpc/texcompapp/: MainActivity.java
android/TexcompApp/app/src/main/res/layout/: activity_main.xml
android/TexcompApp/app/src/main/res/values/: strings.xml  themes.xml
android/TexcompApp/app/src/main/res/values-night/: themes.xml
android/TexcompApp/app/src/test/java/fi/tuni/cpc/texcompapp/: ExampleUnitTest.java
android/TexcompApp/gradle/wrapper/: gradle-wrapper.properties
scripts/: bench.nu  divtest.py  eval.nu  numfi.py  transcode.nu
src/: platform.hpp  simple_astc.cpp  simple_astc.hpp  simple_astc_common.cpp  simple_astc_int.cpp  simple_astc_int_arm.cpp  simple_astc_int_platform.hpp  simple_astc_int_tce.cpp  simple_astc_int_x86.cpp  simple_bc1.cpp  simple_bc1.h  simple_bcn_common.h  simple_bilinear.cpp  simple_mathlib.hpp  simple_texcomp.hpp  simple_ycocg.cpp  simple_ycocg_bc3.cpp  transcoder.cpp  transcoder.hpp  transcoder_main.cpp
src/utils/: downsampler.cpp  quantizer.cpp
tests/: inv_div.cpp  test_inv.cpp
