option(
  'bc1_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in BC1 encoding.',
)

option(
  'astc_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in ASTC encoding.',
)

option(
  'use_double',
  type: 'boolean',
  value: true,
  description: 'Use double in calculations or set it to false to use float.',
)
