option(
  'bc1_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in BC1 encoding.',
)

option(
  'astc_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in ASTC encoding.',
)

option(
  'astc_trim_endpoints',
  type: 'boolean',
  value: false,
  description: 'Use advanced endpoint calculation that eliminates outliers.',
)

option(
  'use_double',
  type: 'boolean',
  value: true,
  description: 'Use double in calculations or set it to false to use float.',
)

option(
  'fast_math',
  type: 'boolean',
  value: true,
  description: 'Enable fast math.',
)
