option(
  'bc1_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in BC1 encoding.',
)

option(
  'astc_sel',
  type: 'boolean',
  value: true,
  description: 'Run an additional select diagonal step in ASTC encoding.',
)

option(
  'astc_trim_endpoints',
  type: 'boolean',
  value: false,
  description: 'Use advanced endpoint calculation that eliminates outliers.',
)

option(
  'float_precision',
  type : 'combo',
  choices : ['double', 'float', 'half'],
  value : 'float'
)

option(
  'fast_math',
  type: 'boolean',
  value: true,
  description: 'Enable fast math.',
)

option(
  'tracy_enable',
  type: 'boolean',
  value: false,
  description: 'Enable Tracy profiling.',
)

option(
  'diagnostics',
  type: 'boolean',
  value: false,
  description: 'Enable extra diagnostics.',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  description: 'Enable OpenMP.',
)
